27/01/2020:
	- Added content-negotiation to IIIF info.json retrieval. If an IIIF
	  context profile has been added to the HTTP Accept headers, the
	  specified version will be used.
	- Also added ability to disable caching. All info.json responses now
	  not cached by Memcached and Content-Control header is set to private.


23/01/2020:
	- Refactored and corrected resolution calculation code in View class
	- Added IIIF_VERSION server directive and support for v3 info.json


21/01/2020:
	- Changes to standardize error messages in TPTImage class


17/01/2020:
	- Modified MAX_CVT startup variable. Values can now be set all the way
	  down to 1px. Also possible to set to -1 to disable all limits


10/10/2019:
	- Added CORS header to PFL profile output


19/12/2019:
	- Switched indices to unsigned long long in interpolation routines in
	  Transform.cc to better handle very large image requests. Also added
	  memory allocation exception handling in Main.cc


04/12/2019:
	- Added FILESYSTEM_SUFFIX configuration variable.


04/07/2019:
	- Updated homepage URLs.
	- Forced Content-type for error messages to client text/plain to avoid
	  potential XSS issues.


24/03/2016: Version 1.1 Released


20/06/2019:
	- Documentation updates for doxygen


13/06/2019:
	- Re-factored to display Logger output type availability at configure stage.
	- SIGHUP signal now empties internal caches rather than terminates iipsrv.


12/06/2019:
	- Fix to avoid unnecessary conversion to binary when image already binary.
	- Update to OpenJPEG code to fix problem when re-using codec structures
	  more than once in the same request (for example when calculating histogram).


11/06/2019:
	- Fixes to eliminate Coverity static scan analysis warnings.
	- New rewritten OpenJPEG module: now faster, cleaner and correctly
	  handles ICC profiles, bilevel and 16 bit images. Now activated by
	  default if OpenJPEG library found and Kakadu not requested.


13/05/2019: