@@ -101,7 +101,7 @@ string IIPResponse::formatResponse() {
   if( error.length() ){
     response = server + eof + "Cache-Control: no-cache" + eof + mimeType + eof;
     if( !cors.empty() ) response += cors + eof;
-    response += "Status: 400 Bad Request" + eof +
+    response += status + eof +
       "Content-Disposition: inline;filename=\"IIPisAMadGameClosedToOurUnderstanding.netfpx\"" +
       eof + eof + error;
   }
@@ -119,7 +119,7 @@ string IIPResponse::formatResponse() {
 string IIPResponse::getAdvert(){
 
   string advert = server + eof + "Content-Type: text/html" + eof;
-  advert += "Status: 400 Bad Request" + eof;
+  advert += status + eof;
   advert += "Content-Disposition: inline;filename=\"iipsrv.html\"" + eof + eof;
   advert += "<!DOCTYPE html><html lang=\"en\"><head><meta charset=\"utf-8\"/><title>IIPImage Server</title><meta name=\"DC.creator\" content=\"Ruven Pillay &lt;ruven@users.sourceforge.net&gt;\"/><meta name=\"DC.title\" content=\"IIPImage Server\"/><meta name=\"DC.source\" content=\"https://iipimage.sourceforge.io\"/></head><body style=\"font-family:Helvetica,sans-serif; margin:4em\"><center><h1>IIPImage Server</h1><h2>Version "
     + string( VERSION ) +
